--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,8 @@ section#login {
     box-shadow: 0px 0px 15px rgba(119, 0, 255, 0.39) ;
 
     transform: translate(-50%, -50%);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#formulario {
