--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,7 @@ section#login {
     overflow: hidden;
 
     background: url(../imagens/pexels-tom-swinnen-1309766\ \(1\).jpg);
-    background-position: center;
+    background-position: left;
     background-size: cover;
     background-repeat: no-repeat;
 
