--- a/estilos/style.css
+++ b/estilos/style.css
@@ -11,7 +11,7 @@
 
 body, html {
     background: url(../imagens/pexels-tom-swinnen-1309766\ \(1\).jpg);
-    background-position: left;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
@@ -25,7 +25,7 @@ section#login {
     overflow: hidden;
 
     background: url(../imagens/pexels-tom-swinnen-1309766\ \(1\).jpg);
-    background-position: left;
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 
